[gd_scene load_steps=9 format=3 uid="uid://cfead7bcuslp4"]

[ext_resource type="Texture2D" uid="uid://buvygmke8by44" path="res://Sprites/Player/example_fix_player.png" id="1"]
[ext_resource type="Texture2D" uid="uid://jq3w8mrmq7b0" path="res://Sprites/Dungeon_1/Stage_1/slime/examplefix_slime.png" id="2"]
[ext_resource type="Script" uid="uid://cnnycoui3l3ef" path="res://Scripts/battlescene.gd" id="3_vhj2j"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="4_akpf4"]
[ext_resource type="PackedScene" uid="uid://buhhqw4k2b2ye" path="res://Scenes/StatsTester.tscn" id="5_pqv1n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e13ox"]
bg_color = Color(0.901961, 0.203922, 0.203922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2q4u"]
bg_color = Color(0.101961, 0.788235, 0.239216, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stats_toggle"]
bg_color = Color(0.321569, 0.431373, 0.784314, 0.803922)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="BattleScene" type="Node2D"]
script = ExtResource("3_vhj2j")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1440.0
offset_bottom = 810.0
color = Color(0.870588, 0.870588, 0.870588, 1)

[node name="BattleContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 810.0

[node name="PlayerContainer" type="Control" parent="BattleContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 255.0
offset_right = 300.0
offset_bottom = 255.0
grow_vertical = 2

[node name="Player" type="Sprite2D" parent="BattleContainer/PlayerContainer"]
position = Vector2(3, -214)
scale = Vector2(6, 6)
texture = ExtResource("1")

[node name="PlayerName" type="Label" parent="BattleContainer/PlayerContainer"]
layout_mode = 0
offset_left = -89.0
offset_top = -386.0
offset_right = 111.0
offset_bottom = -331.0
theme_override_colors/font_color = Color(0, 0.266667, 0.337255, 1)
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 30
text = "Player"
horizontal_alignment = 1

[node name="PlayerHealth" type="ProgressBar" parent="BattleContainer/PlayerContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -75.0
theme_override_styles/background = SubResource("StyleBoxFlat_e13ox")
theme_override_styles/fill = SubResource("StyleBoxFlat_s2q4u")
value = 100.0
show_percentage = false

[node name="EnemyContainer" type="Control" parent="BattleContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 255.0
offset_right = -300.0
offset_bottom = 255.0
grow_horizontal = 0
grow_vertical = 2

[node name="Enemy" type="Sprite2D" parent="BattleContainer/EnemyContainer"]
position = Vector2(6, -213)
scale = Vector2(6, 6)
texture = ExtResource("2")

[node name="EnemyName" type="Label" parent="BattleContainer/EnemyContainer"]
layout_mode = 0
offset_left = -92.0
offset_top = -312.0
offset_right = 108.0
offset_bottom = -257.0
theme_override_colors/font_color = Color(0.454902, 0, 0.0392157, 1)
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 30
text = "Slime"
horizontal_alignment = 1

[node name="EnemyHealth" type="ProgressBar" parent="BattleContainer/EnemyContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -75.0
theme_override_styles/background = SubResource("StyleBoxFlat_e13ox")
theme_override_styles/fill = SubResource("StyleBoxFlat_s2q4u")
value = 100.0
show_percentage = false

[node name="EnemySkillMeter" type="ProgressBar" parent="BattleContainer/EnemyContainer"]
custom_minimum_size = Vector2(200, 15)
layout_mode = 0
offset_left = -100.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = -55.0
theme_override_styles/background = SubResource("StyleBoxFlat_e13ox")
theme_override_styles/fill = SubResource("StyleBoxFlat_s2q4u")
show_percentage = false

[node name="EnemySkillLabel" type="Label" parent="BattleContainer/EnemyContainer"]
visible = false
layout_mode = 0
offset_left = -100.0
offset_top = -55.0
offset_right = 100.0
offset_bottom = -29.0
theme_override_colors/font_color = Color(0.454902, 0, 0.0392157, 1)
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 16
text = "Uses Special Skill!"
horizontal_alignment = 1

[node name="BattleControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 720.0
offset_top = 650.0
offset_right = 720.0
offset_bottom = 650.0

[node name="EngageButton" type="Button" parent="BattleControls"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 24
text = "Engage"

[node name="FightLabel" type="Label" parent="."]
visible = false
offset_left = 620.0
offset_top = 405.0
offset_right = 820.0
offset_bottom = 455.0
theme_override_colors/font_color = Color(0.905882, 0.47451, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 40
text = "FIGHT!"
horizontal_alignment = 1

[node name="StageInfoLabel" type="Label" parent="."]
offset_left = 544.0
offset_top = 52.0
offset_right = 896.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 28
text = "Dungeon 1 - Stage 1"
horizontal_alignment = 1

[node name="StatsTester" parent="." instance=ExtResource("5_pqv1n")]
visible = false
offset_left = 20.0
offset_top = 120.0
offset_right = 400.0
offset_bottom = 600.0

[node name="StatsToggleButton" type="Button" parent="."]
offset_left = 49.0
offset_top = 50.0
offset_right = 295.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("4_akpf4")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_stats_toggle")
text = "Toggle Stats Panel"

[connection signal="pressed" from="BattleControls/EngageButton" to="." method="_on_engage_button_pressed"]
[connection signal="stats_updated" from="StatsTester" to="." method="_on_stats_updated"]
[connection signal="pressed" from="StatsToggleButton" to="." method="_on_stats_toggle_button_pressed"]
